<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/players2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayersActivity2"
    android:background="@drawable/futbolpitch2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/my_background7"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/back_button"
        android:padding="2dp"
        android:layout_width="60dp"
        android:layout_height="40dp"

        android:background="@drawable/arrow_bg"
        android:importantForAccessibility="no"
        android:src="@drawable/arrow"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/Logo"
        app:layout_constraintBottom_toBottomOf="@id/Logo" />

    <EditText
        android:id="@+id/player_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:padding="5dp"
        android:hint="@string/name"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_hint"
        android:textColorHighlight="@color/grey"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/text_input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Logo" />

    <TextView
        android:id="@+id/player_img_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/add_player_image"
        android:textSize="8pt"
        android:selectAllOnFocus="true"
        android:textColor="@color/grey_hint"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/text_input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/position_spinner" />

    <ImageView
        android:id="@+id/player_img"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintEnd_toStartOf="@id/upload_button"
        app:layout_constraintTop_toTopOf="@id/upload_button"
        app:layout_constraintBottom_toBottomOf="@id/upload_button"
        />


    <TextView
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textSize="13pt"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:paddingHorizontal="6dp"
        android:layout_marginEnd="6dp"

        app:layout_constraintTop_toTopOf="@id/player_img_input"
        app:layout_constraintBottom_toBottomOf="@id/player_img_input"
        app:layout_constraintEnd_toEndOf="@id/player_img_input"
        />

    <Spinner
        android:id="@+id/position_spinner"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingVertical="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_hint"
        android:textColorHighlight="@color/grey"
        android:fontFamily="@font/montserrat"
        android:spinnerMode="dropdown"
        android:background="@drawable/text_input_background"
        android:popupBackground="@drawable/text_input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_name" />

    <Button
        android:id="@+id/register_button"
        android:backgroundTint="@color/logoColor_transparente"
        android:textColor="@color/myBackgroundColor"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_img_input"
        app:layout_constraintHorizontal_bias="0.8"
        />

    <ImageView
        android:id="@+id/Logo"
        android:alpha="0.75"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/m_logo" />




</androidx.constraintlayout.widget.ConstraintLayout>